[package]
name = "dynamic-provider"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/youngspe/dynamic-provider.rs"
authors = ["Spencer Young"]
description = "Dynamically request arbitrarily-typed values from providers with borrowed data."
license = "MIT"

# Uses associated type bounds
rust-version = "1.79"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
# Enables 'ProvideBox' and impls for Box, Rc, Arc, String
alloc = []

